# cp-op

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
models/real_1/: real1_results.pickle
models/simulation_1/sample_5/: results_testX.csv
notebooks/: 3.0-mz-confirmalize.ipynb  3.1-mz-sim-data-analysis.ipynb  3.3-nm-figures.ipynb  4.0-mz-sp500_constituents.ipynb  4.1-mz-fetch-replication-data.ipynb  4.2-mz-fetch-big-dataset.ipynb  4.3-mz-clean-big-dataset.ipynb  4.4-mz-real-data-reproduction.ipynb  5.2-mz-walk-fwd-analysis-of-results.ipynb
reports/: report.tex
src/models/: hp_opt_sim.py
src/real_data/: fetch_big_set.py  process_data.py  script
src/real_data/queries/: preprocessing_script.sql
src/simulations/: config.py  simulate_data.py
